setup track-o on TS | TODO: Firebase erroring

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -12,8 +12,8 @@
     align-items: center;
     justify-content: space-between;
 
-    background: rgba($GREY_DARK, .9);
-    box-shadow: 0 0 24px -4px $BLACK;
+    background: rgba($PRIMARY, .9);
+    box-shadow: 0 0 24px -4px $GREY_DARK;
     box-sizing: border-box;
 
     .logotype-container {
