--- a/src/app/components/SignIn/SignIn.scss
+++ b/src/app/components/SignIn/SignIn.scss
@@ -1,58 +1,71 @@
 @import "../../style/core/variables";
-@import "../../style/utils/functions";
-@import "../../style/utils/mixins";
-
-.animation-container--signin {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
 
 .signin-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    padding: 48px;
+    width: 100%;
+    height: 100vh;
 
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
 
-    background: $WHITE;
-    box-shadow: 0 0 32px -8px rgba($GREY_DARK, .4);
-    transform: translate(-50%, -50%);
+    box-sizing: border-box;
 
-    h1 {
-        font-size: 26px;
-        font-weight: 600;
-        line-height: 32px;
-        text-transform: uppercase;
-        padding-bottom: 32px;
+    .logo {
+        position: relative;
+        font-weight: 200;
+        letter-spacing: 1px;
+        text-transform: capitalize;
+        padding-bottom: 48px;
+
+        .logo-o {
+            position: relative;
+
+            color: $PRIMARY;
+            font-weight: 900;
+            padding-left: 26px;
+
+            text-transform: uppercase;
+
+            &:after {
+                content: '';
+
+                position: absolute;
+                left: 8px;
+                top: 50%;
+
+                width: 8px;
+                height: 8px;
+
+                border-radius: 50%;
+                background: $PRIMARY;
+
+                transform: translateY(-50%);
+            }
+        }
     }
 
     .signin-form {
-        display: inherit;
-        flex-direction: inherit;
+        width: 320px;
 
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-around;
 
-        button {
-            margin-top: 16px;
-            padding: 8px;
-            border: 0;
+        color: $GREY_TEXT;
 
-            color: $PRIMARY;
-            font-size: 18px;
-            font-weight: 300;
+        padding: 32px;
+        background: $PRIMARY;
 
-            background: none;
-            transition: all .3s ease-in-out;
+        box-shadow: 0 0 24px -4px #000;
 
-            &:hover {
-                background: $PRIMARY;
-                color: $WHITE;
-            }
+        h2 {
+            font-weight: 800;
+            font-family: $MONTSERRAT;
+            text-transform: uppercase;
+
+            padding-bottom: 24px;
         }
     }
 }
