--- a/src/app/components/__universal/AppLoader/AppLoader.scss
+++ b/src/app/components/__universal/AppLoader/AppLoader.scss
@@ -1,70 +1,63 @@
 @import "../../../style/core/variables";
-@import "../../../style/utils/mixins";
-@import "../../../style/utils/functions";
 
-.loader-container {
-    .full-screen {
+.loader-spinner {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 50%;
+    left: 50%;
+    margin: -40px;
+
+    text-align: center;
+    overflow: visible;
+
+    -webkit-animation: sk-rotate 2.0s infinite linear;
+    animation: sk-rotate 2.0s infinite linear;
+
+    .dot1, .dot2 {
+        width: 50%;
+        height: 50%;
+        display: inline-block;
         position: absolute;
         top: 0;
         left: 0;
+        background-color: $PRIMARY;
+        border-radius: 100%;
 
-        width: 100vw;
-        height: 100vh;
-
-        transform: translate(-50%, -50%);
+        -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+        animation: sk-bounce 2.0s infinite ease-in-out;
     }
 
-    .contain {
-        position: relative;
-
-        width: 100%;
-        height: 100%;
+    .dot2 {
+        top: auto;
+        bottom: 0;
+        right: 0;
+        -webkit-animation-delay: -1.0s;
+        animation-delay: -1.0s;
     }
 
-    .spinner-container {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-
-        .spinner {
-            position: relative;
-
-            &:before,
-            &:after {
-                content: "";
-                position: relative;
-                display: block;
-            }
-            &:before {
-                animation: spinner 2.5s cubic-bezier(0.75, 0, 0.5, 1) infinite normal;
-                width: 64px;
-                height: 64px;
-                background-color: $PRIMARY;
-            }
-            &:after {
-                animation: shadow 2.5s cubic-bezier(0.75, 0, 0.5, 1) infinite normal;
-                bottom: -32px;
-                height: 16px;
-                border-radius: 50%;
-                background-color: rgba($GREY_DARK, 0.2);
-            }
+    &.invert {
+        .dot1,
+        .dot2 {
+            background-color: $GREY_TEXT;
         }
     }
 }
 
-@keyframes spinner {
-    50% {
-        border-radius: 50%;
-        transform: scale(0.5) rotate(360deg);
-    }
-    100% {
-        transform: scale(1) rotate(720deg);
-    }
+@-webkit-keyframes sk-rotate { 100% { -webkit-transform: rotate(360deg) }}
+@keyframes sk-rotate { 100% { transform: rotate(360deg); -webkit-transform: rotate(360deg) }}
+
+@-webkit-keyframes sk-bounce {
+    0%, 100% { -webkit-transform: scale(0.0) }
+    50% { -webkit-transform: scale(1.0) }
 }
-@keyframes shadow {
-    50% {
-        transform: scale(0.5);
-        background-color: rgba(#000,0.1);
-    }
+
+@keyframes sk-bounce {
+    0%, 100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    } 50% {
+          transform: scale(1.0);
+          -webkit-transform: scale(1.0);
+      }
 }
