--- a/src/app/style/core/_fonts.scss
+++ b/src/app/style/core/_fonts.scss
@@ -1,2 +1,8 @@
-// Global SASS fonts imports
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+/*!
+ * Made with <3 by Kagami | jakub.bujko@kagami.info
+ * -----  kagami-info  -----
+ *   > $file.filename
+ *   > created @ 9/12/18 12:24 AM
+ */
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,400,600,700,800,900|Open+Sans:200,300,300i,400,400i,600,700,800&subset=latin-ext');
