--- a/src/app/components/Sidebar/Sidebar.scss
+++ b/src/app/components/Sidebar/Sidebar.scss
@@ -5,7 +5,8 @@
     height: 100%;
     padding: 24px;
 
-    background: $PRIMARY;
+    background: $GREY;
+    color: $GREY_DARK;
     box-shadow: 0 0 20px -5px #000;
 
     transition: all .3s ease-in-out;
