--- a/src/app/components/Footer/Footer.scss
+++ b/src/app/components/Footer/Footer.scss
@@ -8,6 +8,7 @@ footer {
     width: 100%;
     background: $GREY_DARK;
     box-shadow: 0 0 24px -4px #000;
+    z-index: 50;
 
     p {
         width: 100%;
