--- a/src/app/style/core/_variables.scss
+++ b/src/app/style/core/_variables.scss
@@ -26,3 +26,5 @@ $GREY_LIGHT: #9396A5;
 $SUCCESS: #85CB33;
 $ERROR: #E3170A;
 
+$GRADIENT_PRIMARY: linear-gradient(to right bottom, #f15025, #ee4e38, #e94f48, #e35155, #db5461);
+
