--- a/src/app/components/Encounters/EncounterCard/EncounterItem/EncounterItem.scss
+++ b/src/app/components/Encounters/EncounterCard/EncounterItem/EncounterItem.scss
@@ -16,14 +16,16 @@
     transition: all .5s ease-in-out;
 
     .item-name {
-        font-weight: 400;
+        font-weight: 600;
         color: $GREY;
         pointer-events: none;
+
+        transition: all .3s ease-in-out;
     }
 
     &.active {
         width: calc(100% - 40px);
-        background-color: $SECONDARY;
+        background: $GRADIENT_PRIMARY;
 
         &:after {
             content: '';
