--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -20,14 +20,34 @@
     box-shadow: 0 0 24px -4px #000;
     box-sizing: border-box;
 
+    z-index: 50;
+
     .logo {
         color: $GREY_TEXT;
         pointer-events: none;
     }
 
-    h3 {
-        font-size: 15px;
-        font-weight: 600;
+    div {
+        position: relative;
+
+        width: 64px;
+        height: 64px;
         cursor: pointer;
+
+        svg {
+            width: 100%;
+            height: 100%;
+
+            path {
+                fill: $GREY;
+                transition: all .3s ease-in-out;
+            }
+        }
+
+        &:hover {
+            svg path {
+                fill: $GREY_TEXT;
+            }
+        }
     }
 }
