--- a/src/app/components/Sidebar/Sidebar.scss
+++ b/src/app/components/Sidebar/Sidebar.scss
@@ -3,11 +3,10 @@
 .sidebar {
     width: 280px;
     height: 100%;
-    padding: 24px;
 
     background: $GREY;
     color: $GREY_DARK;
-    box-shadow: 0 0 20px -5px #000;
+    box-shadow: 0 0 24px -4px #000 inset;
 
     transition: all .3s ease-in-out;
     margin-left: -280px;
@@ -15,5 +14,133 @@
 
     &.active {
         margin-left: 0;
+    }
+
+    .section-header {
+        position: relative;
+
+        padding: 24px 0;
+
+        font-family: $MONTSERRAT;
+        font-weight: 600;
+        text-align: center;
+
+        color: $GREY_LIGHT;
+        background: $GREY_DARK;
+
+        .btn-back {
+            position: absolute;
+            right: 24px;
+            top: 50%;
+            margin-top: -20px;
+
+            width: 40px;
+            height: 40px;
+
+            background: none;
+            border: none;
+
+            svg {
+                height: 100%;
+                width: auto;
+            }
+        }
+    }
+
+    .sidebar-menu {
+        display: flex;
+
+        li {
+            width: 50%;
+            padding: 8px 4px;
+            cursor: pointer;
+            text-align: center;
+            box-sizing: border-box;
+            border: 2px solid $GREY_DARK;
+
+            transition: all .3s ease-in-out;
+
+            p {
+                font-weight: 600;
+                font-family: $MONTSERRAT;
+            }
+
+            &:first-of-type {
+                border-right: none;
+                border-left: none;
+            }
+
+            &:last-of-type {
+                border-right: none;
+            }
+
+            &:hover,
+            &.active {
+                background: $GREY_DARK;
+                color: $GREY;
+            }
+        }
+    }
+    .sidebar-list {
+        padding: 16px 0;
+
+        li {
+            position: relative;
+
+            height: 40px;
+            padding: 8px 16px;
+            cursor: pointer;
+
+            transition: all .3s ease-in-out;
+
+            p {
+                font-family: $MONTSERRAT;
+                font-weight: 400;
+
+                transition: all .3s ease-in-out;
+            }
+
+            &.active {
+                padding-left: 40px;
+                color: $GREY_DARK;
+
+                p {
+                    font-weight: 600;
+                }
+
+                &:after {
+                    content: '';
+                    position: absolute;
+
+                    top: 8px;
+                    right: 16px;
+
+                    width: 0;
+                    height: 0;
+                    border-style: solid;
+                    border-width: 12px 0 12px 12px;
+                    border-color: transparent transparent transparent $GREY_DARK;
+
+                    animation: arrowMove 2s cubic-bezier(.8, .18, .31, .81) infinite;
+                    z-index: 0;
+                }
+            }
+        }
+    }
+}
+
+@keyframes arrowMove {
+    0% {
+        transform: translateX(-56px);
+        opacity: 0;
+    }
+
+    60% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(8px);
+        opacity: 0;
     }
 }
