--- a/src/app/components/__universal/InputField/InputField.scss
+++ b/src/app/components/__universal/InputField/InputField.scss
@@ -10,7 +10,7 @@
 
     width: 100%;
     margin-bottom: 32px;
-    background-color: $PRIMARY;
+    background-color: transparent;
     box-shadow: 0 0 16px -4px $GREY_DARK;
     //border: 2px solid $GREY_DARK;
 
