added handling conditions on encounter items | fiddling with item colours | TODO: Maybe colour schemes for FRIENDS|FOES|NPCs?

--- a/src/app/components/Encounters/Encounters.scss
+++ b/src/app/components/Encounters/Encounters.scss
@@ -3,7 +3,7 @@
 .app-encounters {
     position: relative;
 
-    padding: 32px;
+    padding: 120px 32px 120px 32px;
     box-sizing: border-box;
 
     h2 {
