--- a/src/app/components/Encounters/EncounterCard/EncounterCard.scss
+++ b/src/app/components/Encounters/EncounterCard/EncounterCard.scss
@@ -33,4 +33,12 @@
             color: $SECONDARY;
         }
     }
+
+    .animation-container--conditions {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+
+        z-index: 50;
+    }
 }
