--- a/src/app/components/Encounters/EncounterCard/EncounterItem/EncounterItem.scss
+++ b/src/app/components/Encounters/EncounterCard/EncounterItem/EncounterItem.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: space-between;
 
+    max-height: 64px;
     height: 64px;
     width: 100%;
     padding: 8px;
@@ -23,53 +24,22 @@
         transition: all .3s ease-in-out;
     }
 
-    &.active {
-        width: calc(100% - 40px);
-        background: $GRADIENT_PRIMARY;
-
-        &:after {
-            content: '';
-            position: absolute;
-
-            top: 0;
-            left: calc(100% + 8px);
-
-            width: 0;
-            height: 0;
-            border-style: solid;
-            border-width: 32px 0 32px 32px;
-            border-color: transparent transparent transparent $SECONDARY;
-
-            animation: arrowMove 2s cubic-bezier(.8,.18,.31,.81) infinite;
-            z-index: 0;
-        }
-
-        .item-name {
-            color: $GREY_DARK;
-        }
-
-        .item-statuses .status {
-            background: $GREY_DARK;
-            svg path {
-                fill: $SECONDARY;
-                transition: all .5s ease-in-out;
-            }
-        }
-    }
-
     .item-statuses {
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
 
         width: 60%;
-        height: 100%;
+        height: 56px;
 
+        overflow: hidden;
         z-index: 10;
         .status {
-            height: 100%;
+            height: 48px;
             width: 48px;
             padding-top: 8px;
-            margin-right: 4px;
+            margin: 0 4px 4px 0;
 
             display: flex;
             justify-content: center;
@@ -81,11 +51,236 @@
             svg {
                 height: 100%;
 
-                path {
+                path,
+                polygon {
                     fill: $GREY;
                 }
             }
+            &.add-new {
+                position: relative;
+                padding: 0;
+
+                cursor: pointer;
+
+                animation: fadeIn .6s ease-in-out;
+                svg {
+                    position: relative;
+                    width: 48px;
+
+                    z-index: 20;
+                }
+
+                &:after {
+                    content: '';
+
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+
+                    width: 0;
+                    height: 0;
+
+                    border-radius: 50%;
+                    background: transparent;
+
+                    z-index: 10;
+                    transition: all .6s cubic-bezier(.8,.18,.31,.81);
+                }
+
+                &:hover {
+                    svg {
+                        path,
+                        polygon {
+                            fill: $SECONDARY;
+                        }
+                    }
+
+                    &:after {
+                        top: 0;
+                        left: 0;
+
+                        width: 48px;
+                        height: 48px;
+
+                        background: $GREY_DARK;
+                    }
+                }
+            }
         }
+    }
+
+    &.active {
+        max-height: 132px;
+        min-height: 64px;
+        height: auto;
+        width: calc(100% - 40px);
+
+        &.green {
+            background: $GRADIENT_GREEN;
+            &:after {
+                border-color: transparent transparent transparent $SOLID_FROM_GREEN;
+            }
+
+            .item-statuses .status {
+                svg path,
+                svg polygon {
+                    fill: $SOLID_FROM_GREEN;
+                    transition: all .5s ease-in-out;
+                }
+
+                &:hover {
+                    svg {
+                        path,
+                        polygon {
+                            fill: $SOLID_FROM_GREEN;
+                        }
+                    }
+                }
+            }
+        }
+        &.sea {
+            background: $GRADIENT_SEA;
+            &:after {
+                border-color: transparent transparent transparent $SOLID_FROM_SEA;
+            }
+
+            .item-statuses .status {
+                svg path,
+                svg polygon {
+                    fill: $SOLID_FROM_SEA;
+                    transition: all .5s ease-in-out;
+                }
+
+                &:hover {
+                    svg {
+                        path,
+                        polygon {
+                            fill: $SOLID_FROM_SEA;
+                        }
+                    }
+                }
+            }
+        }
+        &.magenta {
+            background: $GRADIENT_MAGENTA;
+            &:after {
+                border-color: transparent transparent transparent $SOLID_FROM_MAGENTA;
+            }
+
+            .item-statuses .status {
+                svg path,
+                svg polygon {
+                    fill: $SOLID_FROM_MAGENTA;
+                    transition: all .5s ease-in-out;
+                }
+
+                &:hover {
+                    svg {
+                        path,
+                        polygon {
+                            fill: $SOLID_FROM_MAGENTA;
+                        }
+                    }
+                }
+            }
+        }
+        &.blue {
+            background: $GRADIENT_BLUE;
+            &:after {
+                border-color: transparent transparent transparent $SOLID_FROM_BLUE;
+            }
+
+            .item-statuses .status {
+                svg path,
+                svg polygon {
+                    fill: $SOLID_FROM_BLUE;
+                    transition: all .5s ease-in-out;
+                }
+
+                &:hover {
+                    svg {
+                        path,
+                        polygon {
+                            fill: $SOLID_FROM_BLUE;
+                        }
+                    }
+                }
+            }
+        }
+        &.primary {
+            background: $GRADIENT_PRIMARY;
+            &:after {
+                border-color: transparent transparent transparent $SECONDARY;
+            }
+
+            .item-statuses .status {
+                svg path,
+                svg polygon {
+                    fill: $SECONDARY;
+                    transition: all .5s ease-in-out;
+                }
+
+                &:hover {
+                    svg {
+                        path,
+                        polygon {
+                            fill: $SECONDARY;
+                        }
+                    }
+                }
+            }
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+
+            top: 50%;
+            left: calc(100% + 8px);
+
+            width: 0;
+            height: 0;
+            margin-top: -32px;
+            border-style: solid;
+            border-width: 32px 0 32px 32px;
+            border-color: transparent transparent transparent $PRIMARY;
+
+            animation: arrowMove 2s cubic-bezier(.8,.18,.31,.81) infinite;
+            z-index: 0;
+        }
+
+        .item-name {
+            color: $GREY_DARK;
+        }
+
+        .item-statuses {
+            height: auto;
+            .status {
+                background: $GREY_DARK;
+                svg path,
+                svg polygon {
+                    fill: $SECONDARY;
+                    transition: all .5s ease-in-out;
+                }
+
+                &.add-new {
+                    background: transparent;
+                    svg path,
+                    svg polygon {
+                        fill: $GREY_DARK;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
 
