--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -3,7 +3,7 @@
 @import "../../style/utils/mixins";
 
 .app-header {
-    position: relative;
+    position: fixed;
     top: 0;
     left: 0;
     height: 80px;
