--- a/src/app/style/core/_variables.scss
+++ b/src/app/style/core/_variables.scss
@@ -27,4 +27,14 @@ $SUCCESS: #85CB33;
 $ERROR: #E3170A;
 
 $GRADIENT_PRIMARY: linear-gradient(to right bottom, #f15025, #ee4e38, #e94f48, #e35155, #db5461);
+$GRADIENT_GREEN: linear-gradient(to right top, #97cc04, #b2c700, #cac200, #e0bc04, #f3b61f);
+$GRADIENT_BLUE: linear-gradient(to left top, #4392f1, #00abfa, #00c0f9, #00d4f2, #44e5e7);
+$GRADIENT_SEA: linear-gradient(to left bottom, #97cc04, #69d85f, #35e097, #04e4c6, #44e5e7);
+$GRADIENT_MAGENTA: linear-gradient(to left, #ef2d6b, #e03589, #c945a3, #ab54b6, #8661c1);
+
+$SOLID_FROM_GREEN: #f3b61f;
+$SOLID_FROM_BLUE: #4392f1;
+$SOLID_FROM_SEA: #97cc04;
+$SOLID_FROM_MAGENTA: #ef2d6b;
+
 
