--- a/src/app/components/Encounters/Encounters.scss
+++ b/src/app/components/Encounters/Encounters.scss
@@ -3,8 +3,11 @@
 .app-encounters {
     position: relative;
 
+    max-height: 100vh;
     padding: 120px 32px 120px 32px;
+
     box-sizing: border-box;
+    overflow-y: scroll;
 
     h2 {
         width: 100%;
@@ -24,5 +27,82 @@
         flex-wrap: wrap;
         align-items: flex-start;
         justify-content: space-around;
+    }
+
+    .animation-container--add-encounter-modal {
+        position: fixed;
+        top: 120px;
+        left: 50%;
+
+        width: 500px;
+        height: auto;
+        margin-left: -200px;
+
+        z-index: 15;
+
+        .modal {
+            position: static;
+            transform: none;
+        }
+    }
+
+    button.add-encounter {
+        position: fixed;
+        bottom: 72px;
+        right: 72px;
+
+        width: 64px;
+        height: 64px;
+        padding: 0;
+
+        border:none;
+        border-radius: 50%;
+        background:none;
+        overflow: hidden;
+
+        .btn-label svg {
+            transition: all .5s ease-in-out;
+
+            path,
+            polygon {
+                fill: $SECONDARY;
+                transition: all .4s ease-in-out;
+            }
+        }
+
+
+        &:after,
+        &:before {
+            left: 50%;
+            top: 50%;
+            height: 0;
+            width: 0;
+            border-radius: 50%;
+            background: $GRADIENT_PRIMARY;
+        }
+
+        &:hover {
+            .btn-label svg {
+                transform: rotate(360deg);
+
+                path,
+                polygon {
+                    fill: $GREY_DARK;
+                }
+            }
+
+            &:after,
+            &:before {
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                box-shadow: 0 0 12px -2px #000;
+            }
+        }
+
+        &:active {
+            opacity: .7;
+        }
     }
 }
