--- a/src/app/style/core/_variables.scss
+++ b/src/app/style/core/_variables.scss
@@ -19,6 +19,7 @@ $SECONDARY_DARK: #64272D;
 $SECONDARY_LIGHT: #EEB1B7;
 
 $GREY: #5D6278;
+$GREY_MID: #30364C;
 $GREY_DARK: #1B1E29;
 $GREY_TEXT: #FCF7F8;
 $GREY_LIGHT: #9396A5;
