--- a/src/app/style/core/_variables.scss
+++ b/src/app/style/core/_variables.scss
@@ -23,6 +23,7 @@ $GREY_MID: #30364C;
 $GREY_DARK: #1B1E29;
 $GREY_TEXT: #FCF7F8;
 $GREY_LIGHT: #9396A5;
+$WHITE: #FFFFFF;
 
 $SUCCESS: #85CB33;
 $ERROR: #E3170A;
