--- a/src/app/components/Campaigns/Campaigns.scss
+++ b/src/app/components/Campaigns/Campaigns.scss
@@ -30,21 +30,16 @@
     }
 
     .animation-container--add-campaign-modal,
-    .animation-container--add-encounter-modal {
+    .animation-container--add-encounter-modal,
+    .animation-container--add-character-modal {
         position: fixed;
-        top: 120px;
-        left: 50%;
+        top: 0;
+        left: 0;
 
-        width: 500px;
-        height: auto;
-        margin-left: -200px;
+        width: 100%;
+        height: 100%;
 
         z-index: 15;
-
-        .modal {
-            position: static;
-            transform: none;
-        }
     }
 
     button.add-campaign {
